# WeWeb

./: .gitignore  README.md  build.sh  docker-compose.yml
backend/: build.sh
backend/Go-Chi/: .gitignore  Dockerfile  README.md  build.sh  go.mod  go.sum  main.go
backend/Go-Chi/config/: config.properties
backend/Go-GinGonic/: .gitignore  Dockerfile  build.sh  go.mod  go.sum  index.html  main.go
backend/Go-GinGonic/config/: config.properties
backend/Rust-Actix/: Cargo.toml  Dockerfile  build.sh
backend/Rust-Actix/config/: Config.toml
backend/Rust-Actix/src/: lib.rs  main.rs
backend/Rust-Actix/src/auth/: mod.rs  model.rs  service.rs
backend/Rust-Actix/src/core/: config.rs  mod.rs  server.rs
backend/Rust-Actix/src/core/config/: mod.rs
backend/Rust-Actix/src/core/json/: mod.rs
backend/Rust-Actix/src/core/jwt/: mod.rs
backend/Rust-Actix/src/jwt/: mod.rs
backend/Rust-Actix/src/logger/: mod.rs
backend/Rust-Actix/src/module/: mod.rs
backend/Rust-Actix/src/module_actix_web/: config.rs  error.rs  mod.rs  server.rs  service.rs
backend/Rust-Actix/src/module_core/: config.rs  mod.rs
backend/SpringBoot2-Java/: .gitignore  Dockerfile  build.sh  pom.xml
backend/Vertx3-Kotlin/: Dockerfile  README.md  build.sh  pom.xml
frontend/: build.sh
frontend/Angular-Typescript/: .angular-cli.json  Caddyfile  Dockerfile  Dockerfile_caddy  Dockerfile_nginx  README.md  angular.json  build.sh  package-lock.json  package.json  proxy.conf.json  replace.build.js
fullstack/dioxus-tailwind/: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Justfile  README.md  docker-compose.yml  input.css  package-lock.json  package.json
fullstack/dioxus-tailwind/assets/: tailwind.css
fullstack/dioxus-tailwind/just/: build.just  docker.just  install.just  test.just
fullstack/dioxus-tailwind/server/: Cargo.toml
fullstack/dioxus-tailwind/src/: main.rs
fullstack/dioxus-tailwind/ui/: Cargo.toml
fullstack/dioxus-tailwind/ui/src/: echo.rs
fullstack/dioxus-tailwind/web/: Cargo.toml
fullstack/dioxus-tailwind/web/assets/: tailwind.css
fullstack/dioxus-tailwind/web/src/: main.rs
fullstack/dioxus-tailwind/web/src/server/: mod.rs  session.rs
fullstack/dioxus-tailwind/web/src/server_fn/: session.rs
fullstack/dioxus-tailwind/web/src/views/: blog.rs
fullstack/dioxus-tailwind/web/src/web/ui/: log.rs
fullstack/dioxus-tailwind/web/src/web/views/: blog.rs
fullstack/leptos-tailwind/: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
(+382 files in other folders)
