[package]
name = "rust_actix"
version = "0.1.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
chrono = "0.4"
config = "0.9"
failure = "0.1"
failure_derive = "0.1"
fern = "0.5"
jsonwebtoken = "4.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"

[dev-dependencies]
lazy_static = "1.0"
