[package]
name = "rust_actix"
version = "0.1.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
config = "0.9"
coreutils_auth = "0.1.0"
coreutils_json = "0.1.0"
coreutils_jwt = "0.1.0"
coreutils_logger = "0.1.0"
coreutils_module = "0.1.0"
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
lazy_static = "1.0"
