[package]
name = "rust_actix"
version = "0.1.0"
edition = "2018"
authors = ["Francesco Cina <ufoscout@gmail.com>"]

[dependencies]
async-trait = "0.1"
actix-web = "4.0.0-beta.8"
config = "0.11"
lightspeed = { version = "0.40", features = ["auth", "core", "logger"]}
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
lazy_static = "1.0"
