[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "server",
]

[workspace.dependencies]
dioxus = { version = "0.6.0" }
dioxus-cli-config = { version = "0.6.0" }
dioxus-fullstack = { version = "0.6.0"}
dioxus-web = { version = "0.6.0" }

# workspace
ui = { path = "ui" }
server = { path = "server" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
